Added a simple neural layer and a trivial test for it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(neural-threads layer.cpp network.cpp neuron.cpp main.cpp)
 
 install(TARGETS neural-threads RUNTIME DESTINATION bin)
 
-add_executable(neural-threads-tests neuron.cpp tests/tests_simple.cpp)
+add_executable(neural-threads-tests neuron.cpp layer.cpp tests/tests_simple.cpp)
 target_link_libraries(neural-threads-tests gtest)
 
 list(APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -g -Wall -ftest-coverage -fprofile-arcs")
